IPROTO-322 Schema compatibility checks
* Also support Protolock .lock file I/O